# axon-python-synapse

./: .gitignore  README.md  command_handler.py  commands.py  demo.py  event_handler.py  events.py  fetch_summary_query.py  issue_card_command.py  pyproject.toml  queries.py  requirements.txt  setup.py  synapse_client.py  web_ui.py
adapter/: message_handlers.py  payload_service.py
application/: aggregates.py  repositories.py  views.py
axon/: __init__.py  application.py  client.py  message_handler.py  objects.py  synapse_client.py
axon/adapter/: handlers.py  payloads.py
axon/application/: aggregates.py
domain/: decider.py
giftcard/: payloads.py
giftcard/adapter/: giftcard_event_repository.py  giftcard_state_repository.py
giftcard/application/: giftcard_query_handler.py
giftcard/domain/: giftcard.py  giftcard_view.py
src/axon/: __init__.py  logging.yaml
src/axon/adapter/: handlers.py  payloads.py
src/axon/application/: aggregates.py  repositories.py  views.py
src/axon/domain/: view.py
src/axon/synapse/: __init__.py  client.py  errors.py  responses.py
templates/: index.jinja2
tests/: conftest.py  test_client.py  test_payloads.py
tests/cassettes/test_client/: test_register_command_handler.yaml  test_register_event_handler.yaml  test_register_query_handler.yaml
